--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: julia-actions/setup-julia@v1
       
-      - name: Run Tests
-        run: julia --project=. -e "using Pkg; Pkg.test(\"MonetDB\")"
+      # - name: Run Tests
+      #   run: julia --project=. -e "using Pkg; Pkg.test(\"MonetDB\")"
