--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,6 @@ MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+julia = "1.8"
