--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -6,6 +6,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: monetdb/monetdb
+      ports: 
+        - 50000:50000
 
     steps:
       - uses: actions/checkout@v3
