--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -5,9 +5,11 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: monetdb/monetdb
-      ports: 
-        - 50000:50000
+    services:
+      monetdb:
+        image: monetdb/monetdb
+        ports: 
+          - 50000:50000
 
     steps:
       - uses: actions/checkout@v3
